macroweave/tests/ui/err/empty_input_list.stderr
error: input list must contain at least one row
 --> tests/ui/err/empty_input_list.rs:4:18
  |
4 |     repeat!(T in [] {
  |                  ^^
