macroweave/tests/ui/err/empty_input_list.rs
use macroweave::repeat;

fn main() {
    repeat!(T in [] {
        let _ = stringify!(T);
    });
}
